# CythonROS

./: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/: send_pose.cpp  send_pose_backup.cpp
